--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="bar a2">
                         <h1>2</h1>
                         <h2>
-                            God of War <br>
+                            God of War series<br>
                             <i class="ri-star-fill"></i>
                             <i class="ri-star-fill"></i>
                             <i class="ri-star-fill"></i>
